--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,27 @@
-@media (max-width: 1200px) {
+:root {
+  --input-gradient: linear-gradient(#6448fe, #600594);
+}
+
+@media (min-width: 768px) and (max-width: 991px) {
+  body {
+    color: white;
+    font-size: 16px !important;
+  }
+  .firstCardData {
+    padding-top: 23px !important;
+  }
+  .numberCard {
+    margin-top: 30px !important;
+    font-size: 16px !important;
+  }
+  .infoOther span {
+    font-size: 16px !important;
+  }
+  .cvv {
+    font-size: 16px;
+    padding-left: 205px !important;
+    padding-top: 75px !important;
+  }
 }
 
 body {
@@ -7,7 +30,7 @@ body {
   height: 100vh;
   background-image: url("../images/bg-main-desktop.png");
   background-repeat: no-repeat;
-  background-size: contain;
+  background-size: 33% 100vh;
 }
 
 .main {
@@ -92,6 +115,16 @@ input {
   width: 100%;
   padding-top: 10px;
   padding-bottom: 10px;
+}
+
+input:focus {
+  outline: none;
+  border: double 1px transparent;
+  border-radius: 8px;
+  background-image: linear-gradient(white, white),
+    radial-gradient(circle at top left, #6448fe, #600594);
+  background-origin: border-box;
+  background-clip: padding-box, border-box;
 }
 
 label {
