--- a/src/style.css
+++ b/src/style.css
@@ -38,6 +38,7 @@
 
   .firstCardData {
     padding: 13px !important;
+    width: 300px !important;
   }
   .numberCard {
     font-size: calc(1rem) !important;
@@ -65,6 +66,7 @@
   }
   .firstCardData {
     padding-top: 23px !important;
+    width: 280px !important;
   }
   .numberCard {
     margin-top: 30px !important;
@@ -110,10 +112,11 @@ body {
   z-index: 1000;
   padding-left: 0%;
   padding-top: 30px;
+  width: 350px;
 }
 
 .numberCard {
-  margin-top: 60px;
+  margin-top: 75px;
   font-size: 22px;
   letter-spacing: 5px;
   span:nth-child(4n) {
@@ -213,4 +216,32 @@ label {
   padding-top: 14px;
   padding-bottom: 14px;
   border-radius: 8px;
+}
+
+.wrongFormat {
+  text-transform: capitalize;
+  color: red;
+  font-size: 12px;
+}
+
+.labels {
+  display: flex;
+  width: 100%;
+}
+
+.mmstyle {
+  width: 60%;
+}
+
+.cvcstyle {
+  width: 40%;
+  text-align: center;
+}
+
+.inputWar {
+  border: 1px solid rgb(255, 0, 0);
+}
+
+#parConfirm {
+  color: #424242;
 }
