--- a/src/style.css
+++ b/src/style.css
@@ -18,8 +18,6 @@
   .inputInfo {
     margin-top: -40vh !important;
   }
-  .cards {
-  }
 
   .frontCard {
     margin-top: 120px;
@@ -46,7 +44,7 @@
   }
 
   .infoOther {
-    font-size: calc(1rem) !important;
+    font-size: calc(0.7rem) !important;
     padding-bottom: 1vh !important;
     margin-top: 10px !important;
   }
@@ -74,7 +72,7 @@
     font-size: 16px !important;
   }
   .infoOther span {
-    font-size: 16px !important;
+    font-size: 12px !important;
   }
   .cvv {
     font-size: 16px;
@@ -91,6 +89,7 @@ body {
   background-image: url("../images/bg-main-desktop.png");
   background-repeat: no-repeat;
   background-size: 33% 100vh;
+  color: #220930;
 }
 
 .main {
@@ -98,7 +97,11 @@ body {
   align-items: center;
   width: 100%;
 }
-
+.cards {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
 .frontCard {
   position: relative;
   z-index: 0;
@@ -118,7 +121,8 @@ body {
 
 .numberCard {
   margin-top: 60px;
-  font-size: 22px;
+  font-size: 24px;
+  font-weight: 500;
   letter-spacing: 5px;
   span:nth-child(4n) {
     margin-inline-end: 2vh;
@@ -136,6 +140,7 @@ body {
 
 .infoOther {
   margin-top: 2vh;
+  font-size: 16px;
   display: flex;
   justify-content: space-between;
   text-transform: uppercase;
@@ -150,7 +155,7 @@ body {
 }
 
 form {
-  width: 80%;
+  width: 60%;
   display: flex;
   flex-direction: column;
   justify-content: center;
